[gd_scene load_steps=4 format=3 uid="uid://c3krpy8p0se8o"]

[ext_resource type="Script" path="res://scripts/lane_judge.gd" id="1_0bfsi"]

[sub_resource type="BoxShape3D" id="BoxShape3D_snkdh"]
size = Vector3(1.91113, 1, 0.954099)

[sub_resource type="BoxShape3D" id="BoxShape3D_bj1iv"]
size = Vector3(1.93622, 0.774178, 0.337055)

[node name="LaneJudge" type="Node3D"]
script = ExtResource("1_0bfsi")

[node name="LanePerfect" type="Area3D" parent="."]

[node name="LaneHitbox" type="CollisionShape3D" parent="LanePerfect"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.439763)
shape = SubResource("BoxShape3D_snkdh")

[node name="LaneGreat" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.93988, 0, 1.58672)

[node name="LaneHitbox" type="CollisionShape3D" parent="LaneGreat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.931742, 0, -2.69945)
shape = SubResource("BoxShape3D_bj1iv")

[node name="LaneHitbox2" type="CollisionShape3D" parent="LaneGreat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.931742, 0, -1.35461)
shape = SubResource("BoxShape3D_bj1iv")

[node name="LaneGood" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.93988, 0, 1.48296)

[node name="LaneHitbox" type="CollisionShape3D" parent="LaneGood"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.931742, 0, -2.9571)
shape = SubResource("BoxShape3D_bj1iv")

[node name="LaneHitbox2" type="CollisionShape3D" parent="LaneGood"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.931742, 0, -0.896903)
shape = SubResource("BoxShape3D_bj1iv")

[node name="LaneMiss" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.93988, 0, -2.06945)

[node name="LaneHitbox2" type="CollisionShape3D" parent="LaneMiss"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.931742, 0, 2.99252)
shape = SubResource("BoxShape3D_bj1iv")

[connection signal="body_entered" from="LanePerfect" to="." method="_on_lane_perfect_body_entered"]
[connection signal="body_entered" from="LaneGreat" to="." method="_on_lane_great_body_entered"]
[connection signal="body_entered" from="LaneGood" to="." method="_on_lane_good_body_entered"]
[connection signal="body_entered" from="LaneMiss" to="." method="_on_lane_miss_body_entered"]
